--- a/views/partials/artworksFilters.ejs
+++ b/views/partials/artworksFilters.ejs
@@ -12,7 +12,7 @@
     <div class="filters button-group js-radio-button-group device-type">
       
         <a href="">
-          <button class="button is-checked">All</button>
+          <button class="button is-checked">ALL</button>
         </a>
       </button>
       <% parsed_setting_desc.filters.forEach(tab => { %>
@@ -74,7 +74,6 @@
 
       // filterFromUrl = window.location.href.split('#')[1];
       filterFromUrl = buttons[i].dataset.value
-      console.log(filterFromUrl);
       filterItems()
     })
   }  
