--- a/views/pages/labs.ejs
+++ b/views/pages/labs.ejs
@@ -15,7 +15,10 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <h1><%- parsed_setting_desc.menu[1] %></h1>
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
+            <h1><%- parsed_setting_desc.menu[1] %></h1>
+        </div>
     </div>
     
     <div class="row d-flex lab">
@@ -23,18 +26,18 @@
         <% let colBool = true;
             parsed_lab_desc.images.forEach(el => {
             if (colBool==true) { %>
-                <div class="col-3"></div>
-                <div class="col-3 d-flex justify-content-center align-items-center lab-img">
+                <div class="col-sm-4 col-lg-3"></div>
+                <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                     <img src="<%- el %>">
                 </div>
                     
 
             <% colBool = false;
                 } else {%>
-                <div class="col-3 d-flex justify-content-center align-items-center lab-img">
+                <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                     <img src="<%- el %>">
                 </div>
-                <div class="col-3"></div>
+                <div class="col-sm-4 col-lg-3"></div>
             <% colBool = true;
             }
         })%>
