--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -10,7 +10,7 @@
       <% } %>
         <h2> <span><%- shotsInfos[i].title %></span></h2>
           
-          <%- include('../partials/artworksTags', {i : i}); %>
+          <%- include('../artworks/artworksTags', {i : i}); %>
 
         </div>
       <% if (bool == true){ %>
@@ -43,47 +43,4 @@
 }
 </style>
 
-
-<script>
-  const galleryItems = document.getElementsByClassName('gallery-items');
-  const noItemMessage = document.getElementById("no-item-message");
-
-  let url = window.location.href;
-  let filterFromUrl = url.split('#')[1];
-
-  function hideMessage(){
-    noItemMessage.classList.add('d-none');
-    noItemMessage.classList.remove('d-flex');
-  }
-  function showMessage(){
-    noItemMessage.classList.add('d-flex');
-    noItemMessage.classList.remove('d-none');
-  }
-
-
-  function filterItems(){
-  let hasMessage = true;
-  let array = [];
-  for(let i=0; i < galleryItems.length; i++){
-    if(galleryItems[i].classList.contains(filterFromUrl)){
-      array.push(galleryItems[i].dataset.id);
-      hasMessage = false
-    }else{
-      galleryItems[i].classList.add('d-none');
-    }
-    array.forEach( id => {
-      if (galleryItems[i].dataset.id == id){
-        console.log(galleryItems[i].classList);
-        galleryItems[i].classList.remove('d-none');
-      }
-    })
-  }
-  console.log(array);
-  if(hasMessage){
-    showMessage();
-  }else{
-    hideMessage();
-  }
-}
-
-</script>
+<%- include('./artworksGalleryScript.ejs'); %>
