responsive for homepage

--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -38,17 +38,31 @@
 #diveButton p{
 	color:white;
 	font-size:2em;
-	padding-top:20px;
-	padding-right:20px;
-	padding-left:20px;
-	padding-bottom:20px;
+	padding: 20px;
 	text-align:center;
 	font-family:"roboto", sans-serif;
 }
 
+@media screen and (max-width: 1280px) {
+	#personnalLogo{
+		width:12.5em;
+		height:12.5em;
+	}
+
+	#diveButton{
+		width:15em;
+	}
+
+	#diveButton p{
+		font-size:1.5em;
+	}
+
+}
 
 @media screen and (max-width:980px) {
 	#personnalLogo {
+		width:25em;
+		height:25em;
 		margin-top: calc(60% - 25em/2);
 		margin-left:calc(50% - 25em/2);
 	}
@@ -62,5 +76,14 @@
 
 	#personnalText p {
 		font-size: 6em;
-	}	
+	}
+
+	#diveButton{
+		width:20em;
+	}
+
+	#diveButton p{
+		font-size:2em;
+		padding: 26px 20px;
+	}
 }
