--- a/views/partials/layout/footer.ejs
+++ b/views/partials/layout/footer.ejs
@@ -1,6 +1,6 @@
 
 <div id="credits">
-    <p>codé par Bassam, Nils et Mathieu</p>
+    <p>codé par Nils Boisson et Mathieu Dubart</p>
 </div>
 <div id="socialMedias">
     <a href="<%- userInfos.links.instagram %>" target="_blank"><img id="leftIcon" src="https://www.pngplay.com/wp-content/uploads/13/Black-And-White-Instagram-Logo-PNG-Photos.png"></a>
@@ -11,71 +11,3 @@
     <p>Mentions légales</p>
 </div>
 
-<style>
-    footer{
-        width: 100%;
-        color:white;
-        background-color:black;
-        padding:20px;
-        display:inline-flex;
-        font-family:"Roboto", sans-serif;
-        margin-top:11px;
-    }
-
-    .footer{
-        position:relative;
-        bottom:0;
-    }
-    .container {
-        width: 100%;
-        padding-right: 0px;
-        padding-left: 0px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    p{
-        font-size:20px;;
-    }
-    #credits{
-        float:left;
-        margin-left:10%;
-    }
-
-    #centerIcon{
-        margin-left:2em;
-        margin-right:2em;
-    }
-
-    #socialMedias{
-        margin-right: auto;
-        margin-left: auto;
-    }
-    #socialMedias img{
-        max-width:40px;
-    }
-    #legalMentions{
-        float:right;
-        margin-right:10%;
-    }
-
-    @media screen and (max-width: 980px) {
-
-        footer{
-            display:grid;
-            text-align:center;
-        }
-
-        #credits{
-            text-align:center;
-            margin-right:10%;
-        }
-
-        #legalMentions {
-            text-align:center;
-            padding-top:20px;
-            margin-left:10%;
-        }
-
-    }
-
-</style>
