--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -14,7 +14,7 @@
   
   
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xxl-12 d-flex justify-content-center" id="titles"> 
+    <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
       <h1><%- parsed_setting_desc.menu[0] %></h1>
     </div>
   </div>
