--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -15,8 +15,7 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-md-2"></div>
-        <div class="col-md-10">
+        <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
