--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -15,8 +15,7 @@
     </div>
 
     <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-md-2"></div>
-        <div class="col-md-10">
+        <div class="col-xxl-12 d-flex justify-content-start" id="titles"> 
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
@@ -27,7 +26,8 @@
             let labLength = parsed_lab_desc.images.length;
             for(j=0; j < labLength; j++) {
                 if (colBool==true) { %>
-                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center"> <p id="mobileNumbers<%-j%>" class="mobile-numbers d-none"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
+                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center "> <p class="mobile-numbers"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
+                    
                     <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                         <img src="<%- parsed_lab_desc.images[j] %>">
                     </div>
@@ -38,7 +38,7 @@
                     <div class="col-sm-8 col-lg-3 d-flex justify-content-center align-items-center lab-img">
                         <img src="<%- parsed_lab_desc.images[j] %>">
                     </div>
-                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center"> <p id="mobileNumbers<%-j%>" class="mobile-numbers d-none"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
+                    <div class="col-sm-4 col-lg-3 d-flex justify-content-center align-items-center"> <p class="mobile-numbers"> <% if(j<9) { %> 0<%-j+1%> <%} else {%> <%-j+1%> <%}%> </p></div>
                 <% colBool = true;
                 }
             } %>
@@ -50,9 +50,6 @@
     <%# include('../partials/footer'); %>
     </footer> -->
 
-    <script>
-        let numberPosts = <%= labLength %>;
-    </script>
-        <%- include ('../partials/bottom/bottomScripts'); %>
+
 </body>
 </html>
