--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -6,7 +6,7 @@
         <link rel='preconnect' href='https://fonts.googleapis.com'>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!-- <script src="./index.js"></script> -->
-        <%- include('../partials/homeHead'); %>
+        <%- include('../partials/head/homeHead'); %>
 
         <%- include('../partials/backgroundAndFonts') %>
 
