--- a/public/style/style.css
+++ b/public/style/style.css
@@ -13,10 +13,6 @@ body{
     /* overflow-x: hidden; */
 }
 
-/* .container {
-    border: 1px cyan solid;
-} */
-
 body{
     padding-top:50px;
 }
@@ -46,6 +42,35 @@ body{
     width: 60px;
 }
 
+
+.footer {
+    width: 100%;
+    height: 50px;
+    position:absolute;
+    background-color: #000;
+    color: #fff;
+    left: 0;
+    bottom: -22px;
+}
+
+.infos-container {
+    width: 100%;
+}
+
+.socialMediasFooter a img {
+    width: 30px;
+    height: 30px;
+}
+
+.legalMentions, .credits {
+    height: 100%;
+}
+
+.legalMentions p, .credits p{
+    margin-bottom: 0;
+}
+
+
 @media screen and (max-width:980px){
 
     .header {
@@ -61,9 +86,4 @@ body{
     .burgerMenu img {
         width: 120px;
     }
-}
-
-#scriptTester {
-    height: 200px;
-    width: 200px;
 }
