--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -24,8 +24,8 @@
         </div>
     </main>
 
-    <!-- <footer class="footer col sm-12">
-        <%# include('../partials/layout/footer'); %>
-    </footer> -->
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
+        <%- include('../partials/layout/footer'); %>
+    </footer>
 </body>
 </html>
