--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -35,9 +35,9 @@
     <div class="col-xxl-1"></div>
   </div>
 
-    <!-- <footer class="footer col sm-12">
-        <%# include('../partials/layout/footer'); %>
-    </footer> -->
+  <footer class="footer col sm-12">
+    <%- include('../partials/footer'); %>
+  </footer>
 
 </body>
 </html>
