--- a/public/style/style.css
+++ b/public/style/style.css
@@ -86,4 +86,14 @@ body{
     .burgerMenu img {
         width: 120px;
     }
+    
+    .footer {
+        height: 150px;
+        font-size: 1.4em;
+    }
+
+    .socialMediasFooter a img {
+        width: 50px;
+        height: 50px;
+    }
 }
