--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -23,6 +23,6 @@
 
 
 
-    <!-- <footer class="footer col sm-12">
-        <%# include('../partials/footer'); %>
-    </footer> -->
+    <footer class="footer col sm-12">
+        <%- include('../partials/footer'); %>
+    </footer>
