adding footer on every page

--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -21,5 +21,8 @@
         </div>
     </div>
 
+    <footer class="footer col sm-12">
+        <%- include('../partials/footer'); %>
+    </footer>
 </body>
 </html>
