--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -56,9 +56,9 @@
         </style>
 
 <!-- ############################################ FOOTER ############################################ -->
-    <!-- <footer class="footer col sm-12">
-        <%# include('../partials/footer'); %>
-    </footer> -->
+  <footer class="footer col sm-12">
+    <%- include('../partials/footer'); %>
+  </footer>
 
   </body>
   </html>
