--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -35,8 +35,8 @@
         </div>
 
 
-    <!-- <footer class="footer col sm-12">
-        <%# include('../partials/layout/footer'); %>
-    </footer> -->
+        <footer class="footer col sm-12">
+            <%- include('../partials/footer'); %>
+        </footer>
 </body>
 </html>
