fixed footer routes

--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -21,7 +21,7 @@
     </div>
 
     <footer class="footer col sm-12">
-        <%- include('../partials/footer'); %>
+        <%- include('../partials/layout/footer'); %>
     </footer>
 </body>
 </html>
