--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -47,7 +47,7 @@
 
     
     <footer class="footer col sm-12">
-        <%- include('../partials/footer'); %>
+        <%- include('../partials/layout/footer'); %>
     </footer>
 
 
