--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -57,7 +57,7 @@
 
 <!-- ############################################ FOOTER ############################################ -->
   <footer class="footer col sm-12">
-    <%- include('../partials/footer'); %>
+    <%- include('../partials/layout/footer'); %>
   </footer>
 
   </body>
