--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -26,7 +26,7 @@
     </div>
     
     <footer class="footer col sm-12">
-        <%- include('../partials/footer'); %>
+        <%- include('../partials/layout/footer'); %>
     </footer>
 </body>
 </html>
