--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -36,7 +36,7 @@
   </div>
 
   <footer class="footer col sm-12">
-    <%- include('../partials/footer'); %>
+    <%- include('../partials/layout/footer'); %>
   </footer>
 
 </body>
