--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -36,7 +36,7 @@
 
 
         <footer class="footer col sm-12">
-            <%- include('../partials/footer'); %>
+            <%- include('../partials/layout/footer'); %>
         </footer>
 </body>
 </html>
