fixed margin projects in artworks

--- a/views/partials/artworks/artworksGallery.ejs
+++ b/views/partials/artworks/artworksGallery.ejs
@@ -41,6 +41,9 @@
 .no-item-message{
   margin-top: 64px;
 }
+.gallery-items{
+  margin-bottom: 64px;
+}
 </style>
 
 <%- include('./artworksGalleryScript.ejs'); %>
