--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -35,7 +35,7 @@
         </div>
 
 
-        <footer class="footer col sm-12">
+        <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
             <%- include('../partials/layout/footer'); %>
         </footer>
 </body>
