--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <%- include('../partials/heads/homeHead'); %>
-    <%- include('../partials/backgroundAndFonts') %>
     <%- include('../partials/heads/labHead'); %>
 </head>
 <body class="container">
@@ -20,7 +19,7 @@
         </div>
     </div>
 
-    <footer class="footer col sm-12">
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
 </body>
