--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/homeHead'); %>
 </head>
-<body class="container">
+<body class="container body">
     
     <%- include('../partials/socialMedia'); %>
     
@@ -23,9 +23,5 @@
             <p>Let's dive right in</p>
         </div>
     </main>
-
-    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
-        <%- include('../partials/layout/footer'); %>
-    </footer>
 </body>
 </html>
