--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -8,8 +8,6 @@
         <!-- <script src="./index.js"></script> -->
         <%- include('../partials/head/homeHead'); %>
 
-        <%- include('../partials/backgroundAndFonts') %>
-
     </head>
 
     <body>
@@ -56,9 +54,9 @@
         </style>
 
 <!-- ############################################ FOOTER ############################################ -->
-  <footer class="footer col sm-12">
-    <%- include('../partials/layout/footer'); %>
-  </footer>
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
+      <%- include('../partials/layout/footer'); %>
+    </footer>
 
   </body>
   </html>
