--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -25,7 +25,7 @@
         </div>
     </div>
     
-    <footer class="footer col sm-12">
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
 </body>
