--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <%- include('../partials/heads/artworksHead'); %>
-    <%- include('../partials/backgroundAndFonts') %>
 </head>
 <body class="container">
 
@@ -35,7 +34,7 @@
     <div class="col-xxl-1"></div>
   </div>
 
-  <footer class="footer col sm-12">
+  <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
     <%- include('../partials/layout/footer'); %>
   </footer>
 
