--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <%- include('../partials/heads/homeHead'); %>
-    <%- include('../partials/backgroundAndFonts') %>
     <%- include('../partials/heads/labHead'); %>
 </head>
 <body class="container">
@@ -46,7 +45,7 @@
 
 
     
-    <footer class="footer col sm-12">
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
 
