--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -43,6 +43,17 @@
 	font-family:"roboto", sans-serif;
 }
 
+@media screen and (max-width:1440px) and (max-height:900px) {
+	#personnalLogo {
+		width:15em;
+		height:15em;
+	}
+
+	#personnalText p{
+		font-size:3.5em;
+	}
+}
+
 @media screen and (max-width: 1280px) {
 	#personnalLogo{
 		width:12.5em;
