--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/heads/homeHead'); %>
     <%- include('../partials/heads/labHead'); %>
 </head>
-<body class="container">
+<body>
     <header>
         <%- include('../partials/layout/header'); %>
     </header>
@@ -18,9 +18,112 @@
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
-
+    <div class="buttons">
+        <button id="memory">Memory</button>
+        <button id="morpion">Tic Tac Toe</button>
+        <button id="pong">Pong</button>
+        <button id="clear">clear console</button>
+    </div>
+    <div class="games-content">
+        <div class="gameboy-container">
+            <img src="https://www.dropbox.com/s/r5gppj57r695clp/SWITCH.svg?raw=1" alt="gameboy" class="gameboy-img">
+            <div class="game" id="game"><script id="gameScript" src="https://www.khanacademy.org/computer-programming/spin-off-of-tp-final-algo-nils/6464827390214144/embed.js?editor=no&buttons=no&author=no&embed=yes" ></script></div>
+        </div>
+    </div>      
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
 </body>
 </html>
+
+<script>
+
+    
+    let gameScript = document.getElementById('gameScript');
+    let memory = document.getElementById('memory');
+    let morpion = document.getElementById('morpion');
+    let pong = document.getElementById('pong');
+    let clear = document.getElementById('clear');
+    let game = document.querySelector('.game')
+    
+    
+    let tab = ["https://www.khanacademy.org/computer-programming/spin-off-of-tp-final-algo-nils/6464827390214144/embed.js?editor=no&buttons=no&author=no&embed=yes",
+                "https://www.khanacademy.org/computer-programming/tic-tac-toe-nils/4661321081602048/embed.js?editor=no&buttons=no&author=no&embed=yes",
+                "https://www.khanacademy.org/computer-programming/spin-off-of-pong-nils/6319792470409216/embed.js?editor=no&buttons=no&author=no&embed=yes"
+                ]
+    
+    clear.addEventListener('click', () => {
+        console.clear();
+    });
+    
+    [memory, morpion, pong].forEach(elm => {
+        elm.addEventListener("click", () => {
+            if(elm.id=="memory") {
+                var newScript = document.createElement("script");
+                newScript.src = tab[0];
+                game.innerHTML = "";
+                game.appendChild(newScript);
+            } else if (elm.id=="morpion") {
+                var newScript = document.createElement("script");
+                newScript.src = tab[1];
+                game.innerHTML = "";
+                game.appendChild(newScript);
+            }else{
+                var newScript = document.createElement("script");
+                newScript.src = tab[2];
+                game.innerHTML = "";
+                game.appendChild(newScript);
+            }
+        })
+    });
+</script>
+
+
+<style>
+    .game{
+        width: 400px;
+        height: 400px;
+        position: absolute;
+        top: 20px;
+        left: calc(50% - 200px);
+        overflow: hidden;
+    }
+    
+    iframe{
+        position: absolute;
+        top: 220px;
+        left: calc(50% - 200px);
+    }
+    
+    .game iframe{
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .games-content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid black
+    }
+    
+    .gameboy-container {
+        width: 900px;
+        height: 440px;
+        position: relative;
+        
+    }
+    
+    .gameboy-container img {
+        width: 100%;
+        height: 100%;
+    }
+    .game-embed{
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+</style>
