--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,6 +4,9 @@
 	box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
 body{
     font-family:  Helvetica, sans-serif;
     background-image: var(--custom-background-image);
