--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -20,7 +20,9 @@
             <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
         </div>
         <div id="diveButton">
-            <p>Let's dive right in</p>
+            <a href="artworks">
+                <p>Let's dive right in</p>
+            </a>
         </div>
     </main>
 </body>
