--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -18,12 +18,16 @@
             <h1><%- parsed_setting_desc.menu[1] %></h1>
         </div>
     </div>
-    <div class="buttons">
-        <button id="memory">Memory</button>
-        <button id="morpion">Tic Tac Toe</button>
-        <button id="pong">Pong</button>
-        <button id="clear">clear console</button>
+
+    <div class="filter-container">
+        <div class="filters button-group js-radio-button-group device-type">
+            <button class="button is-checked" id="memory">Memory</button>
+            <button class="button" id="morpion">Tic Tac Toe</button>
+            <button class="button" id="pong">Pong</button>
+            <button class="button" id="clear">clear console</button>
+        </div>
     </div>
+
     <div class="games-content">
         <div class="gameboy-container">
             <img src="https://www.dropbox.com/s/r5gppj57r695clp/SWITCH.svg?raw=1" alt="gameboy" class="gameboy-img">
@@ -87,14 +91,15 @@
         top: 20px;
         left: calc(50% - 200px);
         overflow: hidden;
+
     }
-    
+
     iframe{
         position: absolute;
-        top: 220px;
+        top: 342px;
         left: calc(50% - 200px);
     }
-    
+
     .game iframe{
         position: absolute;
         top: 0;
@@ -107,16 +112,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid black
+        margin-bottom: 64px;
     }
-    
+
     .gameboy-container {
         width: 900px;
         height: 440px;
         position: relative;
         
     }
-    
+
     .gameboy-container img {
         width: 100%;
         height: 100%;
@@ -126,4 +131,36 @@
         top: 0;
         left: 0;
     }
+    .filter-container{
+    margin-bottom: 64px;
+    }
+    .filters {
+        margin-top: 40px;
+        display: flex;
+        display: -webkit-flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .filters button {
+        padding: 10px 25px;
+        margin: 0px 5px;
+        background-color: #121212;
+        border: none;
+        border-radius: 10px;
+        transition: 150ms;
+        color: #ffffff;
+        font-size: 16px;
+        line-height: 25px;
+        font-weight: 700;
+        position: relative;
+        outline: none;
+        cursor: pointer;
+    }
+    .filters button.is-checked {
+    background-color: whitesmoke;
+    border: 1px solid #121212;
+    color: #121212;
+  }
 </style>
+
+<%- include('../partials/artworks/artworksFiltersScript.ejs'); %>
