--- a/public/style/style.css
+++ b/public/style/style.css
@@ -49,6 +49,23 @@ p{
     width: 60px;
 }
 
+.navmenu {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s ease-in-out;
+} 
+
+.navmenu .container {
+    padding-top: 50px;
+}
+
+.active-menu {
+    transition: 0.5s ease-in-out;
+    background-color: var(--custom-background-color);
+}
 
 .footer {
     width: 100vw;
