--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -1,11 +1,24 @@
 
 <div class="row d-flex justify-content-center align-items-center header">
     <div class="col-md-2 d-flex justify-content-end profilePicture">
-
         <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
     </div>
     <div class="col-md-8"></div>
-    <div class="col-md-2 burgerMenu">
+    <div class="col-md-2 burgerMenu" id="burgerMenu">
         <a><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png"></a>
+    </div>
+</div>
+
+<div class="navmenu active-menu" id="navmenu">
+    <div class="container">
+        <div class="row d-flex justify-content-center align-items-center header">
+            <div class="col-md-2 d-flex justify-content-end profilePicture">
+                <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
+            </div>
+            <div class="col-md-8"></div>
+            <div class="col-md-2 burgerMenu" id="burgerMenu">
+                <a><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-close-512.png"></a>
+            </div>
+        </div>
     </div>
 </div>
