linking menu script on each page to test them

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -35,8 +35,10 @@
     </div>
 
 
-        <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
-            <%- include('../partials/layout/footer'); %>
-        </footer>
+    <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
+        <%- include('../partials/layout/footer'); %>
+    </footer>
+
+    <script src="/script.js"></script>
 </body>
 </html>
