--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -36,12 +36,12 @@
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
+
+    <script src="/script.js"></script>
 </body>
 </html>
 
 <script>
-
-    
     let gameScript = document.getElementById('gameScript');
     let memory = document.getElementById('memory');
     let morpion = document.getElementById('morpion');
