--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -28,5 +28,7 @@
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
+
+    <script src="/script.js"></script>
 </body>
 </html>
