--- a/public/style/style.css
+++ b/public/style/style.css
@@ -65,7 +65,6 @@ p{
     position: absolute;
     top: 0;
     left: 0;
-    transition: 0.5s ease-in-out;
     z-index: 100;
 } 
 
@@ -75,7 +74,6 @@ p{
 
 .active-menu {
     display: block;
-    transition: 0.5s ease-in-out;
     background-color: var(--custom-background-color);
 }
 
@@ -107,6 +105,15 @@ p{
     color: #fff;
 }
 
+.links-container {
+    margin-top: 18px;
+}
+.menu-links {
+    text-decoration: none;
+    color: #000;
+    font-size: 2.5rem;
+    font-weight: 600;
+}
 
 @media screen and (max-width:980px){
 
