--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -14,7 +14,8 @@
     <div id="contactContainer">
         <div id="contactMe">
             <div class="contactTitles">
-                <h1>CONTACT ME</h1>
+                <h1> <%- parsed_setting_desc.menu[3] %> </h1>
+            </div>
             </div>
             <div id="socialMedia">
                 <%- include('../partials/contactSocialMedia')%>
