--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,7 +17,7 @@
             <img src="<%- parsed_bio.image_home[0] %>"  id="imgHome">
         </div>
         <div id="personnalText">
-            <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
+            <h1> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></h1>
         </div>
         <div id="diveButton">
             <a href="artworks">
