--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -16,6 +16,15 @@
         --custom-primary-color: <%- parsed_setting_desc.colors[0] %>;
         --custom-secondary-color: <%- parsed_setting_desc.colors[1] %>;
         --custom-accent-color: <%- parsed_setting_desc.colors[2] %>;
+
+        --custom-title-color: <%- parsed_setting_desc.font_colors[0] %>;
+        --custom-corps-color: <%- parsed_setting_desc.font_colors[1] %>;
+
+        --custom-h1-size: <%- parsed_setting_desc.title_size[0] %>;
+        --custom-h2-size: <%- parsed_setting_desc.title_size[1] %>;
+        --custom-h3-size: <%- parsed_setting_desc.title_size[2] %>;
+        --custom-h4-size: <%- parsed_setting_desc.title_size[3] %>;
+        --custom-h5-size: <%- parsed_setting_desc.title_size[4] %>;
+        --custom-h6-size: <%- parsed_setting_desc.title_size[5] %>;  
     }
 </style>
-
