starting project page + lot of redirections
Co-authored-by: Nils Boisson <zaynbsn@users.noreply.github.com>

--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -2,42 +2,88 @@
     <html lang="en">
     <head>
       <meta charset="utf-8">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/style/projects.css">
         <link rel='preconnect' href='https://fonts.googleapis.com'>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!-- <script src="./index.js"></script> -->
-        <%- include('../partials/head/homeHead'); %>
+        <%- include('../partials/heads/homeHead'); %>
 
     </head>
 
-    <body>
+    <body class="container">
       <header>
-          <%- include('../partials/header'); %>
+          <%- include('../partials//layout/header'); %>
       </header>
 
-      <div id="socialMedias">
-        <%- include('../partials/socialMedia'); %>
-    </div>
+      <%- include('../partials/socialMedia'); %>
 <!-- ######################################### INTRO PROJECT ######################################### -->
 
-        <!-- <div id="IntroProjectContainer">
-          <div id="titleProject">
+      <div class="row d-flex justify-content-center align-items-center project-intro">
 
-          </div>
-          <div id="imageProjetMain">
-            <img src="<%# shotsInfos. %>"
-          </div>
-        </div> -->
+        <div class="col-md-3 d-flex justify-content-end align-items-center">
+          <% for (i=0; i < shotsInfos.length; i++) { 
+              if (shotsInfos[i].id == shotsInfos.shotId) { %>
+                <h1> <% if(i<10) { %>0<% } %><%- i+1 %> </h1>
+                <%
+              }
+            } %>
+        </div>
 
+        <div class="col-md-5 d-flex justify-content-start align-items-center">
+          <% shotsInfos.forEach(project => {
+            if (project.id == shotsInfos.shotId) { %>
+              <h1><%- project.title %></h1>
+              <% currentProject = project;
+            }
+          }) %>
+          
+
+        </div>
+
+        <div class="col-md-2 d-flex flex-column justify-content-center tags-project">
+          <div class="row">
+            <div class="col-md-12 d-flex justify-content-end align-items-center project-date">
+              <h6> <%- project_date %> </h6>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 d-flex inline-flex justify-content-end align-items-center tags-container">
+              <% currentProject.tags.forEach(tag => { %>
+                <p><%- tag %></p>
+              <% }) %>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-2 d-flex justify-content-end align-items-center"></div>
+      </div>
+    
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-8 cover-projet"><img src="<%= currentProject.images.hidpi %>" alt="<%= currentProject.title %>" class="img-fluid"> </div>
+      <div class="col-2"></div>
+    </div>
+    
 <!-- ########################## DESCRIPTION PROJECT (SOUS FORME DE GALLERY) ########################## -->
 
-        <div id="galleryContainer">
-          <% projectGalleryArray.forEach(item => {
+    <div class="row">
+      <div class="col-12">
+        <h2>Brief</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <p><%- project_brief %></p>
+      </div>    
+    </div>
+        <!-- <div id="galleryContainer">
+          <%# project_gallery_array.forEach(item => {
             if (helper.isImg(item) == false){ %>
-              <p class="textProject"> <%- item %> </p>
-          <% }else{ %>
-              <img src="<%- item %>" class="imgProjet">
-          <% }
+              <p class="textProject"> <%# item %> </p>
+          <%# }else{ %>
+              <img src="<%# item %>" class="imgProjet">
+          <%# }
           }) %>
         </div>
 
@@ -51,7 +97,7 @@
             justify-content: center;
             align-items: center;
           }
-        </style>
+        </style> -->
 
 <!-- ############################################ FOOTER ############################################ -->
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
