--- a/views/partials/artworks/artworksGalleryScript.ejs
+++ b/views/partials/artworks/artworksGalleryScript.ejs
@@ -27,8 +27,8 @@ if(galleryItems[i].classList.contains(filterFromUrl)){
 }
 array.forEach( id => {
     if (galleryItems[i].dataset.id == id){
-    console.log(galleryItems[i].classList);
-    galleryItems[i].classList.remove('d-none');
+    //console.log(galleryItems[i].classList);
+    //galleryItems[i].classList.remove('d-none');
     }
 })
 }
